--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,58 @@
+html{
+	width:100%;
+	height:100%;
+
+}
 body{
-    margin:auto;
+ margin:auto;
+}
+
+h1{
+text-align:center;
+}
+
+.tiles{
+	
+	background-color:grey;
+	padding:20px;
+    height: 400px;
+}
+.tile{
+	padding:2px;
+  	background-color:#FFA33B; 
+  	border:#FFC97A solid 4px;
+  	width:60px;
+  	height:60px;
+	text-align: center;
+	display:inline-block;
+	margin:auto;
+}
+
+span{
+	color:#E9F97A;
+  	font-size:30px;
+	font-weight:800;
+	padding: 20px;
+}
+
+.hidden{
+	display: none;
+}
+
+#button-group
+{
+	text-align: center;
+	
+}
+.menu{
+	background-color:blue;
+}
+
+button{
+	
+}
+button:active,
+button:hover
+{
+	background-color:#E9F97A; 
 }
