--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,16 @@ text-align:center;
 }
 
 .tiles{
-	
 	background-color:grey;
 	padding:20px;
     height: 400px;
+		top:;
+		left:;
 }
 .tile{
+	cursor: move;
 	padding:2px;
-  	background-color:#FFA33B; 
+  	background-color:#FFA33B;
   	border:#FFC97A solid 4px;
   	width:60px;
   	height:60px;
@@ -42,17 +44,17 @@ span{
 #button-group
 {
 	text-align: center;
-	
+
 }
 .menu{
 	background-color:blue;
 }
 
 button{
-	
+
 }
 button:active,
 button:hover
 {
-	background-color:#E9F97A; 
+	background-color:#E9F97A;
 }
