--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,64 @@
-html{
-	width:100%;
+
+html,body{
+
 	height:100%;
-
 }
+
+a{
+ text-decoration: none;
+}
+
+aside {
+	float:right;
+	width:20%;
+}
+
+.wrapper{
+	width:80%;
+	margin:auto;
+}
+
 body{
- margin:auto;
+ background-color: antiquewhite;
 }
 
-h1{
-text-align:center;
+.signup{
+	border-color:solid black;
+}
+
+.main-image{
+	background-image: url("../img/main.png");
+	background-repeat: no-repeat;
+	background-size: 13rem;
+	background-position: center;
+	height: 200px;
+	padding:20px;
+	margin:auto;
 }
 
 .tiles{
-	background-color:grey;
-	padding:20px;
-    height: 400px;
-		top:;
-		left:;
+	height: 400px;
+	width:80%;	
 }
+
 .tile{
 	cursor: move;
 	padding:2px;
-  	background-color:#FFA33B;
-  	border:#FFC97A solid 4px;
-  	width:60px;
-  	height:60px;
+	background-color:grey;
+	background-image: url("../img/main.png");
+	background-repeat: no-repeat;
+	background-size: 13rem;
+	margin:auto;
+  	/* border:#FFC97A solid 4px; */
+  	width:10rem;
+  	height:10rem;
 	text-align: center;
 	display:inline-block;
-	margin:auto;
-	position: absolute;
+	margin:2px;
+	/* position: absolute; */
+}
+tile:hover{
+	padding:0px;
 }
 
 span{
@@ -42,20 +72,5 @@ span{
 	display: none;
 }
 
-#button-group
-{
-	text-align: center;
-
-}
-.menu{
-	background-color:blue;
-}
-
-button{
-
-}
-button:active,
-button:hover
-{
-	background-color:#E9F97A;
-}
+#align-center{
+text-align: center;}
